After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754269 - Should not autoload files that don't exist
Should not autoload files that don't exist
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other Linux
: Normal minor
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-29 02:46 UTC by Michael Catanzaro
Modified: 2015-08-29 14:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't autoload files that don't exist (1014 bytes, patch)
2015-08-29 02:50 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2015-08-29 02:46:38 UTC
Open some file in some project, then close Builder. Delete the file. Reopen Builder, and reopen the project. Builder opens the file again, displaying it as a blank file. This is confusing, since the file doesn't exist.
Comment 1 Michael Catanzaro 2015-08-29 02:50:35 UTC
Created attachment 310232 [details] [review]
Don't autoload files that don't exist

This fixes it, but there's probably a small race if the file is deleted after the check....
Comment 2 Christian Hergert 2015-08-29 06:25:18 UTC
Review of attachment 310232 [details] [review]:

LGTM
Comment 3 Michael Catanzaro 2015-08-29 14:10:33 UTC
Attachment 310232 [details] pushed as 7285c5f - Don't autoload files that don't exist