Don't autoload files that don't exist

Open some file in some project, then close Builder. Delete the file.
Reopen Builder, and reopen the project. Builder opens the file again,
displaying it as a blank file. This is confusing, since the file doesn't
exist.

https://bugzilla.gnome.org/show_bug.cgi?id=754269